fixed overflow in hero

--- a/components/Home/Hero/Hero.module.scss
+++ b/components/Home/Hero/Hero.module.scss
@@ -11,6 +11,7 @@
 	flex-direction: column;
 	padding-top: 20rem;
 	text-align: center;
+	overflow-x: hidden;
 	h1 {
 		font-size: 3.5rem;
 		margin-top: 1em;
